@@ -9,6 +9,8 @@ Broker:
   MOSQ_EVT_MESSAGE event.
 - Fix unused flags in CONNECT command being forced to be 0, which is not
   required for MQTT v3.1. Closes #2522.
+- Improve documentation of `persistent_client_expiration` option.
+  Closes #2404.
 
 Client library:
 - Fix threads library detection on Windows under cmake. Bumps the minimum
